# LunaDenyCakesGame-Rust

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  build.rs  cargo-about.sh  dist-linux.sh  dist-windows.sh  macroquad.patch  miniquad.patch
android_macroquad/: Cargo.toml
android_macroquad/res/mipmap-anydpi-v26/: luna.xml
android_macroquad/res/values/: strings.xml
android_macroquad/res/values-b+ru/: strings.xml
android_macroquad/src/: main.rs
cake_engine/: Cargo.toml
cake_engine/src/: android.rs  audio.rs  button.rs  color.rs  conf.rs  context.rs  font.rs  fs.rs  gametime.rs  globals.rs  label.rs  lib.rs  log.rs  rect.rs  scene.rs  sprite.rs  texture.rs  utils.rs  vec.rs  view.rs
cake_engine/src/backend/: mod.rs
cake_engine/src/backend/dummy/: context.rs  log.rs  mod.rs
cake_engine/src/backend/macroquad/: color.rs  conf.rs  context.rs  fs.rs  log.rs  mod.rs  rect.rs
cake_engine/src/backend/macroquad/input/: mod.rs  scancode.rs
cake_engine/src/backend/sdl/: color.rs  context.rs  error.rs  fs.rs  log.rs  mod.rs  rect.rs
cake_engine/src/backend/sdl/input/: mod.rs  scancode.rs
cake_engine/src/backend/sfml/: audio.rs  color.rs  context.rs  fs.rs  log.rs  mod.rs  rect.rs  vec.rs
cake_engine/src/backend/sfml/input/: mod.rs  scancode.rs
cake_engine/src/input/: actions.rs  mod.rs  scancode.rs
data/: about.en.txt  about.ru.txt  help.en.txt  help.ru.txt  languages.json  strings.en.json  strings.ru.json
docker/cross-android/: Dockerfile  build-nosign.sh  build.sh  cargo-quad-apk.patch
docker/cross-linux/: Dockerfile  build-all.sh  build-macroquad.sh  build-sdl.sh  build-sfml.sh
docker/cross-windows/: Dockerfile  build-macroquad.sh  build-sdl.sh  build-sfml.sh
src/: achievements.rs  action.rs  balance.rs  common_data.rs  dvd.rs  game.rs  gameaction.rs  lib.rs  main_dummy.rs  main_macroquad.rs  main_sdl.rs  main_sfml.rs  resources.rc  touchui.rs  utils.rs
src/data/: mod.rs  options.rs  texts.rs
src/scene/: about.rs  achievements.rs  bench.rs  bench_result.rs  debug.rs  gameover.rs  help.rs  menu.rs  menu_ctrl.rs  menu_misc.rs  menu_settings.rs  mod.rs  play.rs
