[package]
name = "luna_deny_cakes_game"
version = "0.1.0"
edition = "2021"

[features]
macroquad = ["dep:macroquad", "cake_engine/macroquad"]
sdl = ["cake_engine/sdl"]
sfml = ["cake_engine/sfml"]

[dependencies]
anyhow = "1.0.72"
cfg-if = "1.0.0"
dirs = "5.0.1"
dyn-clone = "1.0.12"
enum-iterator = "1.4.1"
once_cell = "1.18.0"
rand_chacha = "0.3.1"
rand = { version = "0.8.5", default-features = false, features = ["rand_chacha"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_plain = "1.0.1"
sys-locale = "0.3.0"
cake_engine = { path = "./cake_engine", features = ["serde"] }
macroquad = { path = "./macroquad", optional = true }

[build-dependencies]
embed-resource = "2.2.0"

[lib]
name = "luna_deny_cakes_game"

[[bin]]
name = "luna_deny_cakes_game_dummy"
path = "src/main_dummy.rs"

[[bin]]
name = "luna_deny_cakes_game_macroquad"
path = "src/main_macroquad.rs"
required-features = ["macroquad"]

[[bin]]
name = "luna_deny_cakes_game_sdl"
path = "src/main_sdl.rs"
required-features = ["sdl"]

[[bin]]
name = "luna_deny_cakes_game_sfml"
path = "src/main_sfml.rs"
required-features = ["sfml"]
