[package]
name = "cake_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
macroquad = ["dep:macroquad", "dep:futures-executor"]
sfml = ["dep:sfml"]
sdl = ["dep:sdl2"]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.72"
cfg-if = "1.0.0"
once_cell = "1.18.0"
self_cell = "1.0.1"
futures-executor = { version = "0.3.28", optional = true }
macroquad = { path = "../macroquad", optional = true, features = ["audio"] }
serde = { version = "1.0.183", features = ["derive"], optional = true }
sfml = { version = "0.21.0", optional = true }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "bee13b5", optional = true, features = ["image", "mixer", "ttf"] }
